[gd_scene load_steps=3 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Theme/Theme.tres" type="Theme" id=3]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphEdit" type="GraphEdit" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.10352e-05
margin_top = 40.0
theme = ExtResource( 3 )
right_disconnects = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" type="Panel" parent="."]
anchor_right = 1.0
margin_bottom = 40.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavButtons" type="HBoxContainer" parent="."]
margin_left = 12.0
margin_top = 9.0
margin_right = 272.0
margin_bottom = 33.0
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="NavButtons"]
margin_right = 70.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Add node"

[node name="Convert" type="Button" parent="NavButtons"]
margin_left = 74.0
margin_right = 163.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Convert to JS"

[node name="Theme" type="Button" parent="NavButtons"]
margin_left = 167.0
margin_right = 254.0
margin_bottom = 24.0
theme = ExtResource( 3 )
text = "Load Theme"

[node name="TextEdit" type="TextEdit" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 33.0
theme = ExtResource( 3 )
text = "extends Control

var sgn = load(\"res://SimpleGraphNode.tscn\")
var initial_position = Vector2(40,40)
var node_index = 0

# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass


func _on_Button_pressed():
	var node = sgn.instance()
	node.offset += initial_position + (node_index * Vector2(20,20))
	node.title += '-' + str(node_index)
	$GraphEdit.add_child(node)
	node_index += 1


func _on_GraphEdit_connection_request(from, from_slot, to, to_slot):
	$GraphEdit.connect_node(from, from_slot, to, to_slot)


func _on_GraphEdit_disconnection_request(from, from_slot, to, to_slot):
	$GraphEdit.disconnect_node(from, from_slot, to, to_slot)


func _on_Convert_pressed():
	var G = $GraphEdit
	var connection_list = G.get_connection_list()
	print(G.get_connection_list())
	var result = 0
	for i in range(0, connection_list.size()):
		var value = G.get_node(connection_list[i].from).get_node('SpinBox').value
		var value_2 = G.get_node(connection_list[i].to).get_node('SpinBox').value
		result += value
		if i+1 == connection_list.size():
			result += value_2
	print(result)


#func _on_Theme_pressed():
#	$Popup/FileDialog.visible = true
"
readonly = true
highlight_current_line = true
syntax_highlighting = true
show_line_numbers = true
draw_tabs = true
draw_spaces = true
breakpoint_gutter = true
fold_gutter = true
highlight_all_occurrences = true
override_selected_font_color = true
smooth_scrolling = true
hiding_enabled = true
wrap_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="connection_request" from="GraphEdit" to="." method="_on_GraphEdit_connection_request"]
[connection signal="disconnection_request" from="GraphEdit" to="." method="_on_GraphEdit_disconnection_request"]
[connection signal="pressed" from="NavButtons/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="NavButtons/Convert" to="." method="_on_RunProgram_pressed"]
[connection signal="pressed" from="NavButtons/Theme" to="." method="_on_Theme_pressed"]
